--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1291,8 +1291,7 @@ table {
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
  min-height: clamp(360px, 48vh, 520px);
  max-height: min(760px, calc(100vh - 180px));
- min-width: min(100%, 920px);
- width: min(100%, 1000px);
+ width: 100%;
 }
 
 
